--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,4 @@
+/* Base File from https://codepen.io/BendyWendy/pen/pbyxxz */
 * {
     margin: 20px auto;
   }
@@ -19,6 +20,7 @@
     -moz-border-radius: 50px;
     -webkit-border-radius: 50px;
     border-radius: 50px;
+    cursor: pointer;
   }
   
   .Yellow {
@@ -28,6 +30,7 @@
     -moz-border-radius: 50px;
     -webkit-border-radius: 50px;
     border-radius: 50px;
+    cursor: pointer;
   }
   
   .Green {
@@ -37,6 +40,7 @@
     -moz-border-radius: 50px;
     -webkit-border-radius: 50px;
     border-radius: 50px;
+    cursor: pointer;
   }
   
   .rectangle {
